<?xml version="1.0" encoding="utf-8"?>
<resources>
    <plurals name="days">
        <item quantity="one">%d-Day</item>
        <item quantity="two">%d-Days</item>
        <item quantity="other">%d-Days</item>
    </plurals>

    <plurals name="days_free">
        <item quantity="one">%d-Day</item>
        <item quantity="two">%d-Days</item>
        <item quantity="other">%d-Days</item>
    </plurals>

    <plurals name="weeks">
        <item quantity="one">%d-Week</item>
        <item quantity="two">%d-Weeks</item>
        <item quantity="other">%d-Weeks</item>
    </plurals>

    <plurals name="months">
        <item quantity="one">%d-Month</item>
        <item quantity="two">%d-Months</item>
        <item quantity="other">%d-Months</item>
    </plurals>

    <plurals name="years">
        <item quantity="one">%d-Year</item>
        <item quantity="two">%d-Years</item>
        <item quantity="other">%d-Years</item>
    </plurals>

    <string name="billing_subscriptions">Subscriptions</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="btn_accept">ACCEPT</string>

    <string name="txt_trial_title">%1$s trial version</string>
    <string name="txt_trial_descr">Then %1$s per %2$s</string>
    <string name="txt_trial_disclaimer">This enables a %1$s free trial. Then extends to an auto-renewable %2$s subscription for %3$s (only %4$s per %5$s). During the free trial, no money will be charged. Cancel anytime.</string>

    <string name="txt_premium_title">%1$s premium</string>
    <string name="txt_premium_descr">Total %1$s per %2$s</string>
    <string name="txt_premium_price_period">per %1$s</string>
    <string name="txt_premium_disclaimer">This enables an auto-renewable %1$s subscription for %2$s (only %3$s per %4$s). You can cancel anytime!</string>

    <string name="dialog_exit_timer_start">Offer ends in 24:00:00</string>
    <string name="dialog_exit_timer">Offer ends in %1$d:%2$d:%3$d</string>
    <string name="dialog_exit_btn_ok">TRY FREE</string>
    <string name="dialog_exit_title">Really want to quit\nFree Trial?</string>
    <string name="dialog_exit_body">Premium features below are FREE to\nTRY now. You can CANCEL ANYTIME!</string>
    <string name="dialog_disclaimer">The offer includes an auto-renewable subscription. The first %1$s are free, then it will be charged %2$s per %3$s</string>

    <string name="purchase_done">You have been subscribed!</string>
    <string name="purchase_fail">Something went wrong…</string>

    <string name="unlock_all_features">Unlock All Features</string>
    <string name="trial_version" translatable="false">TRIAL VERSION</string>
    <string name="great_price" translatable="false">GREAT PRICE</string>
    <string name="best_choice" translatable="false">BEST CHOICE</string>
    <string name="limited_offer" translatable="false">Limited offer</string>
    <string name="premium" translatable="false">PREMIUM</string>
    <string name="basic" translatable="false">BASIC</string>

    <string name="btn_limited">OR TRY LIMITED VERSION</string>

    <string name="btn_continue">CONTINUE</string>
    <string name="offer_per_week">per week</string>
    <string name="offer_per_year">per year</string>
    <string name="offer_weakly">Weekly\nAccess</string>
    <string name="offer_trial">3-days\nTrial Access</string>
    <string name="offer_lifetime">Annual\nAccess</string>
    <string name="offer_discount">70% DISCOUNT</string>
    <string name="offer_available">Only 8 Offers Available!</string>
    <string name="offer_timer">Offer ends in %1$s:%2$s</string>
    <string name="offer_title">Limited Offer!</string>
    <string name="offer_popular" translatable="false">Most popular</string>

    <string name="offer_disclaimer_weekly">This enabled a 1-week plan with a discount for %1$s, then extends to %2$s/week auto-renewable base plan.</string>
    <string name="offer_disclaimer_trial">This enabled a 3-day trial, then extends to 1-week plan with a 70%% discount for %1$s, then extends to %2$s/week auto-renewable base plan.</string>
    <string name="offer_disclaimer_lifetime">This enabled a 1-year plan with a 80%% discount for %1$s, then extends to %2$s/year auto-renewable base plan</string>

    <string name="offer_weekly_full">%1$s/week</string>
    <string name="offer_weekly_sale">only %1$s</string>
    <string name="offer_trial_sale">then %1$s</string>
    <string name="offer_lifetime_full">%1$s/year</string>

    <string name="offer_notification_title">Hello! You\'re lucky 💥</string>
    <string name="offer_notificatoin_body">Offer ends in 15 minutes 🎁</string>

</resources>
