<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:background="@android:color/transparent"
    android:clipToPadding="false"
    android:clipChildren="false">

    <RelativeLayout
        android:id="@+id/dialog_button_close"
        android:background="@drawable/billing_btn_2"
        android:padding="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginHorizontal="-10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/billing_close"
            app:tint="#80ffffff"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginVertical="@dimen/_35sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/billing_dialog_shape"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_20sdp"
        android:clipToPadding="false"
        android:clipChildren="false">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center_horizontal"
            android:text="@string/dialog_exit_title"
            android:textColor="?attr/billing_text_color"
            android:textSize="18.3sp"/>

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/dialog_exit_body"
            android:textColor="#777777"
            android:textSize="13.9sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/dialog_features"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"/>

        <TextView
            android:id="@+id/dialog_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_features"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="@dimen/_15sdp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/dialog_exit_timer_start"
            android:textColor="?attr/billing_offer_color"
            android:textSize="14.4sp"
            android:textStyle="bold" />


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/txt_progress_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_below="@id/dialog_timer"
            app:shimmer_auto_start="true"
            app:shimmer_clip_to_children="true"
            app:shimmer_direction="left_to_right"
            app:shimmer_repeat_mode="restart"
            app:shimmer_duration="1500"
            app:shimmer_base_alpha="100"
            app:shimmer_intensity="0"
            app:shimmer_highlight_alpha="0">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_button_ok"
                android:background="@drawable/billing_btn_1"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/dialog_exit_btn_ok"
                android:textAllCaps="false"
                android:textSize="15.5sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#ffffff"
                android:foreground="?attr/selectableItemBackground"/>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/txt_dialog_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_progress_container"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/dialog_disclaimer"
            android:textSize="12sp"
            android:textColor="#777777"
            android:textStyle="normal"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>